___________________________________________________________

Future updates and extensions will be available in the module db.
This will only happen if it is necessary or created by the community.
We don't plan to release new versions except for heavy issues.
Upcoming PHP and MySQL branches don't seem to cause problems.
Support for ClanSphere will still remain in our forums and contact forms.


ClanSphere 2011.2.2 >> 2011-12-XX
___________________________________________________________

-- Recommended PHP version changed to 5.4.0

-> Added forwarding support to messages mod (fr33z3m4n)
-> Fixed language switching problems (hajo) 
-> Fixed options and removal in maps mod (palle!)
-> Fixed php error handling with @ sign (hajo)
-> Improved magic_quotes detection and handling (hajo)
-> Removed author from news rss feed (hajo)
-> Reworked servers mod (fr33z3m4n)

-- Fixed a few bugs that were reported at "Trac" --


ClanSphere 2011.2.1 >> 2011-11-01
___________________________________________________________

-- Recommended PHP version changed to 5.3.8

-> Escaped html form output in cash mod (jam2)
-> Removed TextareaExpander due to the bugs it causes in some browsers (hajo)
-> Updated CKEditor to 3.6.2 (hajo)
-> Updated jQuery to 1.6.4 (hajo)

-- Fixed a few bugs that were reported at "Trac" --


ClanSphere 2011.2 >> 2011-07-06
___________________________________________________________

-> Added more information for servers without live stats turned on (patch by markezzz)
-> Added multiple choice option to board vote functionality (patch by lava)
-> Email of new registered users is now hidden by default (hajo)
-> Moved jQuery and corresponding javascript files to new mod jquery (hajo)
-> Renamed CKEditor config file to avoid conflicts with default one on updates (hajo)
-> Updated CKEditor to 3.6.1 (hajo)
-> Updated jQuery to 1.6.2 (hajo)

-- Fixed a few bugs that were reported at "Trac" --


ClanSphere 2011.1 >> 2011-05-21