@@ -1,3 +1,0 @@
-UPDATE {pre}_options SET options_value = '2011.2.2 DEV' WHERE options_mod = 'clansphere' AND options_name = 'version_name';
-UPDATE {pre}_options SET options_value = '2011-12-12' WHERE options_mod = 'clansphere' AND options_name = 'version_date';
-UPDATE {pre}_options SET options_value = '77' WHERE options_mod = 'clansphere' AND options_name = 'version_id';
